--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,21 +3,22 @@
         "lib": ["ESNext"],
         "target": "ESNext",
         "module": "ESNext",
-        "moduleDetection": "force",
+
         "jsx": "react-jsx",
         "allowJs": true,
         "outDir": "dist",
-        
+
         /* Bundler mode */
-        "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
-        "verbatimModuleSyntax": true,
-        "noEmit": true,
+        "moduleResolution": "node",
+        "declaration": true,
+        "declarationDir": "./dist/types",
+        "noEmit": false,
 
         /* Linting */
         "skipLibCheck": true,
         "strict": true,
         "noFallthroughCasesInSwitch": true,
         "forceConsistentCasingInFileNames": true
-    }
+    },
+    "exclude": ["examples", "dist"]
 }
